# clawdesk

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: gen-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  install.rs  mod.rs  service.rs
src/components/: Sidebar.tsx  StatusBadge.tsx  Toast.tsx
src/lib/: tauri.ts
src/pages/: About.tsx  Install.tsx  Service.tsx  Settings.tsx
src/store/: index.ts
src/types/: index.ts
